fix: 修复预研文章格式

--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -65,6 +65,9 @@
   @media (min-width: $screen-lg-min) {
     width: $container-lg;
   }
+  @media (min-width: 1720px) {
+    width: 1560px;
+  }
 }
 
 .container-fluid {
