--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -200,6 +200,13 @@
         }
       }
     }
+
+    .embedded-codesandbox {
+      width: 100%;
+      height: 300px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
   }
   .post-meta {
     .author-name {
@@ -387,6 +394,7 @@
     margin-bottom: 2.5em;
   }
 }
+
 .gatsby-highlight-code-line {
   background-color: #ccc;
   display: block;
