--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,21 +202,18 @@ html.disabled {
 
 /*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  // background-color: $darkblue;
+  width: 8px;
+  height: 8px;
 }
 /*定义滚动条的轨道，内阴影及圆角*/
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
-  // background-color: $darkblue;
+  background: #f1f1f1;
 }
 /*定义滑块，内阴影及圆角*/
 ::-webkit-scrollbar-thumb {
-  /*width: 10px;*/
-  height: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
-  // background-color: $lightpurple;
+  background: #c1c1c1;
+
+  &:hover {
+    background: #a8a8a8;
+  }
 }
