fix: 修复数学公式换行问题

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -524,3 +524,9 @@ pre[class*='language-'] {
   color: white;
   fill: currentColor;
 }
+
+.katex {
+  white-space: normal;
+  line-break: anywhere;
+  word-wrap: break-word;
+}
