feat: 更新css新世界更细致的样式表现transform(50%)

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -527,6 +527,7 @@ pre[class*='language-'] {
 
 .katex {
   white-space: normal;
-  line-break: anywhere;
+  word-break: break-all;
   word-wrap: break-word;
+  line-break: anywhere;
 }
