--- a/static/examples/three-js-practice-test/test-18/index.css
+++ b/static/examples/three-js-practice-test/test-18/index.css
@@ -1,18 +1,25 @@
 html,
 body {
-  height: 100%;
   margin: 0;
+  height: 100%;
+}
+
+#c {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.split {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
 }
 
-#c1 {
+.split > div {
+  width: 100%;
   height: 100%;
-  display: block;
-  width: 50%;
-}
-
-#c2 {
-  height: 100%;
-  display: block;
-  width: 50%;
 }
